Small fixes
・Fixed a bug where page1(); was not being called on load
・Set a upper cap for font size for readability, previous version was unreadable on PC full screen

--- a/styles.css
+++ b/styles.css
@@ -4,12 +4,14 @@ body{
     margin-right: 10%;
 }
 h1{
-  text-align: center;
-  font-size: 6vw;
+    text-align: center;
+    font-size: min(6vw, 60px);
+/*  font-size: 6vw;*/
 }
 h2{
-  text-align: center;
-  font-size: 5vw;
+    text-align: center;
+    font-size: min(5vw, 45px);
+/*  font-size: 5vw;*/
 }
 image{
   width:80%
@@ -19,12 +21,13 @@ image{
 header{
     color: black;
     font-size: 4vw;
-  text-align: center; 
+    text-align: center; 
 }
 
 p{
     color: blue;
-    font-size: 2vw;
+    font-size: min(2vw, 25px);
+/*    font-size: 2vw;*/
 }
 
 img{
@@ -68,7 +71,7 @@ img{
 
 .sensoramaText{
     position: absolute;
-        font-size: min(3vw, 20px);
+    font-size: min(3vw, 20px);
     font-weight: bold;
     color: darkgreen;
     background-color: rgba(220, 220, 220, 0.90);
